# snailz

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
_site/: 404.html
_site/assays/: index.html
_site/grid/: index.html
_site/mangle/: index.html
_site/plates/: index.html
data/: assays.json
data/designs/: 0adfea2b.csv  0d8bd43d.csv  0edd8b0b.csv  129fff67.csv  13acdbba.csv  15c8cb86.csv  16ffbd0d.csv  1d8c64de.csv  2134b94e.csv  22aedcec.csv  2aa9b38e.csv  2bd0b8bf.csv  36afeaa6.csv  3caff9f7.csv  3d6d4ada.csv  4aceda0f.csv  5bfa3ada.csv  61e45945.csv  69cf06ba.csv  6efabdbc.csv  7186d9d8.csv  7b81f79e.csv  7bc2b17d.csv  7bd16263.csv  7cff0dfa.csv  90ecf705.csv  936d0e5c.csv  969e1312.csv  a5bd5b6c.csv  a8fa8a71.csv  a98e20ff.csv  adff6b33.csv  af4d5fd7.csv  b2761dfd.csv  b594c0ab.csv  b6aeb60e.csv  bbe091c7.csv  bbead025.csv  bcb5c4db.csv  bcbf98ed.csv  (+52 more)
data/grids/: COW.csv  GBY.csv  HMB.csv  YOU.csv
data/mangled/: 004c72ca.csv  033b27ec.csv  040af7aa.csv  05cda4a1.csv  06eae3a3.csv  0a1c2a7e.csv  0adfea2b.csv  0b5b47dd.csv  0ba90220.csv  0c0d3a81.csv  0cfce73a.csv  0e256f5d.csv  0e5b12e1.csv  0edd8b0b.csv  0ee7c0ba.csv  0fba1c13.csv  0fead39a.csv  11f5dcff.csv  120dd207.csv  129fff67.csv  13acdbba.csv  15c8cb86.csv  16ffbd0d.csv  18366c5d.csv  18bccb4e.csv  18cc98a8.csv  18e4fc7e.csv  1a64031b.csv  1abedab6.csv  1bdb4dac.csv  1c4cb8e2.csv  1ca6bdb9.csv  1cb2ca8f.csv  1d8c64de.csv  (+358 more)
docs/: 404.html  index.html  objects.inv
pages/: db.md  genomes.md  plates.md  samples.md  staff.md  survey.md  surveymap.md
snailz/: clui.py  grid.py
(+394 files in other folders)
