[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["snailz"]

[tool.setuptools.package-data]
mypkg = ["Makefile", "*.json", "*.csv"]

[project]
name = "snailz"
version = "0.1.0"
authors = [
    {name = "Greg Wilson", email = "gvwilson@third-bit.com"},
]
maintainers = [
    {name = "Greg Wilson", email = "gvwilson@third-bit.com"},
]
description = "Synthetic data generator for snail mutation survey"
keywords = ["open science", "synthetic data"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "faker",
    "geopy",
    "kaleido",
    "pandas",
    "plotly",
    "polars",
    "pyarrow",
    "sqlalchemy",
]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-cov",
]
lint = [
  "ruff",
]

[project.scripts]
snailz = "snailz:clui.main"
